Bug: contact page mobile / iframe overlapping hours section

--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -20,11 +20,12 @@
       p a
         text-decoration: none
         color: black
-    iframe
-      display: flex
-      width: 90%
-      height: 40%
-      margin: auto
+    .iframe-container
+      height: 50vh
+      iframe
+        width: 100%
+        height: 30vh
+        margin: auto
 
 @media only screen and (min-width: 769px)
   .contact-info
@@ -39,6 +40,9 @@
       p a
         text-decoration: none
         color: black
-  iframe
+  .iframe-container
     height: 50vh !important
-    margin-bottom: 3rem !important
+    iframe
+      width: 100%
+      height: 50vh
+      margin: auto
